--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -68,7 +68,8 @@ const structuredData = {
     <meta name="title" content={title} />
     <meta name="description" content={description} />
     <meta name="author" content={author} />
-    <link rel="sitemap" href="/sitemap-index.xml" />
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="googlebot" content="noindex, nofollow">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content={title} />
