--- a/src/components/PasswordProtection.astro
+++ b/src/components/PasswordProtection.astro
@@ -24,6 +24,7 @@
     e.preventDefault();
     const password = (document.querySelector('#password-input') as HTMLInputElement).value;
 
+    // fuck you Paul this is good enough for a wedding site
     if (password === 'CountryMice') {
       sessionStorage.setItem('authenticated', 'true');
       handleAuth();
