password is grabbed from wedding config now as well

--- a/src/components/PasswordProtection.astro
+++ b/src/components/PasswordProtection.astro
@@ -1,8 +1,9 @@
 ---
-// src/components/PasswordProtection.astro
+import { WEDDINGCONFIG } from "../config";
+const { password } = WEDDINGCONFIG;
 ---
 
-<script>
+<script define:vars={{ password }}>
   // Function to check authentication and handle overlay
   function handleAuth() {
     const overlay = document.querySelector('#password-overlay');
@@ -22,10 +23,10 @@
 
   form?.addEventListener('submit', (e) => {
     e.preventDefault();
-    const password = (document.querySelector('#password-input') as HTMLInputElement).value;
+    const password_input = (document.querySelector('#password-input')).value;
 
-    // fuck you Paul this is good enough for a wedding site
-    if (password === 'CountryMice') {
+    // fuck you paul this is good enough
+    if (password_input === password) {
       sessionStorage.setItem('authenticated', 'true');
       handleAuth();
     } else {
@@ -43,9 +44,9 @@
     const form = document.querySelector('#password-form');
     form?.addEventListener('submit', (e) => {
       e.preventDefault();
-      const password = (document.querySelector('#password-input') as HTMLInputElement).value;
+      const password_input = (document.querySelector('#password-input')).value;
 
-      if (password === 'your-password-here') {
+      if (password_input === password) {
         sessionStorage.setItem('authenticated', 'true');
         handleAuth();
       } else {
