--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -139,7 +139,8 @@ const structuredData = {
     <script is:inline src="/toggle-theme.js" async></script>
   </head>
   <body>
-    <PasswordProtection />
-    <slot />
+    <PasswordProtection>
+      <slot />
+    </PasswordProtection>
   </body>
 </html>
