--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import { LOCALE, SITE } from "@config";
 import "@styles/base.css";
 import { ViewTransitions } from "astro:transitions";
 import PasswordProtection from '../components/PasswordProtection.astro';
+import Footer from "@components/Footer.astro";
 
 const googleSiteVerification = import.meta.env.PUBLIC_GOOGLE_SITE_VERIFICATION;
 
@@ -143,4 +144,5 @@ const structuredData = {
       <slot />
     </PasswordProtection>
   </body>
+  <Footer />
 </html>
