--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,7 +14,7 @@ const { noMarginTop = false } = Astro.props;
   <div class="footer-wrapper">
     <Socials centered />
     <div class="copyright-wrapper">
-      <span>Luke & Ainara</span>
+      <span>Wedding</span>
       <span class="separator">&nbsp;|&nbsp;</span>
       <span>June 27th, 2025</span>
       <span class="separator">&nbsp;|&nbsp;</span>
