--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -147,20 +147,13 @@ const pathname = Astro.url.pathname;
     @apply flex w-full flex-col items-center sm:ml-2 sm:flex-row sm:justify-end sm:space-x-4 sm:py-0;
   }
   nav ul {
-    @apply mt-4 grid w-44 grid-cols-2 grid-rows-4 gap-x-2 gap-y-2 sm:ml-0 sm:mt-0 sm:w-auto sm:gap-x-5 sm:gap-y-0;
+    @apply mt-4 gap-x-2 gap-y-2 sm:ml-0 sm:mt-0 sm:w-auto sm:gap-x-5 sm:gap-y-0;
   }
   nav ul li {
     @apply col-span-2 flex items-center justify-center;
   }
   nav ul li a {
     @apply w-full px-4 py-3 text-center font-medium hover:text-skin-accent sm:my-0 sm:px-2 sm:py-1;
-  }
-  nav ul li:nth-last-child(2) a {
-    @apply w-auto;
-  }
-  nav ul li:nth-last-child(1),
-  nav ul li:nth-last-child(2) {
-    @apply col-span-1;
   }
   nav .active {
     @apply underline decoration-wavy decoration-2 underline-offset-4;
@@ -182,18 +175,18 @@ const pathname = Astro.url.pathname;
     @apply scale-125 hover:rotate-12 sm:scale-100;
   }
 
-    .menu-icon line {
-        @apply transition-opacity duration-75 ease-in-out;
-    }
-    .menu-icon .close {
-        opacity: 0;
-    }
-    .menu-icon.is-active .line {
-        @apply opacity-0;
-    }
-    .menu-icon.is-active .close {
-        @apply opacity-100;
-    }
+  .menu-icon line {
+      @apply transition-opacity duration-75 ease-in-out;
+  }
+  .menu-icon .close {
+      opacity: 0;
+  }
+  .menu-icon.is-active .line {
+      @apply opacity-0;
+  }
+  .menu-icon.is-active .close {
+      @apply opacity-100;
+  }
 </style>
 
 <script>
