--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,11 +14,11 @@ const { noMarginTop = false } = Astro.props;
   <div class="footer-wrapper">
     <Socials centered />
     <div class="copyright-wrapper">
-      <span>Wedding</span>
+      <span>Friday, June 27th, 2025</span>
       <span class="separator">&nbsp;|&nbsp;</span>
-      <span>June 27th, 2025</span>
+      <span>Seattle, WA</span>
       <span class="separator">&nbsp;|&nbsp;</span>
-      <span>Bring a rain jacket</span>
+      <span>Bring a raincoat</span>
     </div>
   </div>
 </footer>
