update counting down the days

--- a/src/components/CountdownTimer.astro
+++ b/src/components/CountdownTimer.astro
@@ -3,7 +3,7 @@
 ---
 
 <div class="countdown-wrapper">
-  <p class="countdown-text">Counting down the days...</p>
+  <p class="countdown-text">Counting down the days.</p>
   <div class="countdown" id="countdown">
     <!-- Countdown will be populated by JavaScript -->
   </div>
