--- a/src/pages/activities.astro
+++ b/src/pages/activities.astro
@@ -132,6 +132,7 @@ const activities = [
       name="Activities"
       activities={activities}
       categoryInfo={categoryInfo}
+      client:load
     />
   </main>
 </Layout>
