--- a/src/pages/activities.astro
+++ b/src/pages/activities.astro
@@ -7,17 +7,14 @@ import ActivitySelection from '../components/ActivitySelection.astro';
 
 const categoryInfo = {
   '🌲': 'Nature',
-  '🦅': 'Wildlife',
   '👨‍👩‍👦': 'Family Friendly',
-  '🚗': 'Car Required',
+  '🚍': 'No Car Required',
   '🥾': 'Hiking',
-  '💪': 'Strenuous',
   '🎨': 'Arts & Culture',
-  '🍽️': 'Food',
-  '🏊': 'Water Activity',
-  '⛴️': 'Ferry',
-  '✈️': 'Flight Required',
-  '❄️': 'Snow Possible'
+  '⚡️': 'Quick',
+  '🕒': 'Half Day',
+  '🌞': 'Full Day',
+  '🛏️': 'Multi-Day'
 };
 
 const activities = [
