--- a/src/pages/activities.astro
+++ b/src/pages/activities.astro
@@ -19,19 +19,24 @@ const categoryInfo = {
 
 const activities = [
   {
-    title: "Discovery Park",
-    categories: ['🌲', '🥾', '🦅', '👨‍👩‍👦'],
-    description: "Discovery Park is the largest park in Seattle and offers a variety of hiking trails, beaches, and views of the Sound and surrounding mountains. The park is home to a variety of wildlife, including bald eagles, seals, and sea lions."
-  },
-  {
     title: "Seattle Center",
     categories: ['🎨', '👨‍👩‍👦'],
     description: "The Space Needle, Chihuly Garden of Glass, and the Museum of Pop Culture are all located at the Seattle Center. This is a great place to spend a day."
   },
   {
+    title: "Discovery Park",
+    categories: ['🌲', '🥾', '🦅', '👨‍👩‍👦'],
+    description: "Discovery Park is the largest park in Seattle and offers a variety of hiking trails, beaches, and views of the Sound and surrounding mountains. The park is home to a variety of wildlife, including bald eagles, seals, and sea lions."
+  },
+  {
     title: "Ballard Locks",
     categories: ['🦅', '👨‍👩‍👦', '🏊'],
     description: "The end of June should be a great time to visit the Ballard Locks and watch the salmon run. At the end of June, the Chinook (King) salmon should be running, and you can watch them jump the fish ladder."
+  },
+  {
+    title: "Green Lake",
+    categories: ['🚍', '👨‍👩‍👦', '🏊'],
+    description: "Green Lake is a popular park located in the heart of Seattle. The park is a nice place to walk, picnic, and swim. It is also home to a variety of wildlife, including ducks, geese, and turtles."
   },
   {
     title: "Pike Place Market",
@@ -44,6 +49,11 @@ const activities = [
     description: "Our wedding venue is a great place to go for a walk through the wetlands. The UW campus is also right across the street, which is a pretty place to explore."
   },
   {
+    title: "Seattle Zoo",
+    categories: ['👨‍👩‍👦', '🦒'],
+    description: "The Seattle Zoo is a great place to spend a day with the family. The zoo is home to a variety of animals, including elephants, tigers, and gorillas."
+  },
+  {
     title: "Hot Tub Boats",
     categories: ['🏊', '👨‍👩‍👦'],
     description: "This one is a bit trashy, but it is a lot of fun. You can rent a hot tub boat and cruise around Lake Union. This is a great rainy day activity."
@@ -52,6 +62,11 @@ const activities = [
     title: "Washington Park Arboretum",
     categories: ['🌲', '👨‍👩‍👦'],
     description: "The Washington Park Arboretum is a 230-acre park located on the shores of Lake Washington. Great place to go for a walk, run, or bike ride."
+  },
+  {
+    title: "Gold Bar Reptile Zoo",
+    categories: ['👨‍👩‍👦', '🐍'],
+    description: "Great place to take kids. Located about 30 minutes north of Seattle in Monroe. Daily “close encounters” with various scheduled where children get to pet / hold very large snakes or lizards."
   },
   {
     title: "Snoqualmie Falls",
