--- a/src/pages/activities.astro
+++ b/src/pages/activities.astro
@@ -11,16 +11,13 @@ const categoryInfo = {
   '🚍': 'No Car Required',
   '🥾': 'Hiking',
   '🎨': 'Arts & Culture',
-  '⚡️': 'Quick',
-  '🕒': 'Half Day',
-  '🌞': 'Full Day',
-  '🛏️': 'Multi-Day'
 };
 
 const activities = [
   {
     title: "Seattle Center",
     categories: ['🎨', '👨‍👩‍👦'],
+    duration: "2-6 hours",
     description: "The Space Needle, Chihuly Garden of Glass, and the Museum of Pop Culture are all located at the Seattle Center. This is a great place to spend a day."
   },
   {
