change components import

--- a/src/components/ActivitySelection.astro
+++ b/src/components/ActivitySelection.astro
@@ -1,5 +1,5 @@
 ---
-import ActivityCard from './ActivityCard.astro';
+import ActivityCard from '@components/ActivityCard.astro';
 
 interface Activity {
   title: string;
