Revert "change components import"
This reverts commit 75fe2b2cfdd5896af0eb76c67d88d96d381c1c03.

--- a/src/pages/activities.astro
+++ b/src/pages/activities.astro
@@ -3,7 +3,7 @@ import { SITE } from "@config";
 import Breadcrumbs from "@components/Breadcrumbs.astro";
 import Header from "@components/Header.astro";
 import Layout from "@layouts/Layout.astro";
-import ActivitySelection from '@components/ActivitySelection.astro';
+import ActivitySelection from '../components/ActivitySelection.astro';
 
 const categoryInfo = {
   '🥾': 'Hiking',
