add some more tags

--- a/src/pages/activities.astro
+++ b/src/pages/activities.astro
@@ -33,7 +33,7 @@ const activities = [
   },
   {
     title: "Green Lake",
-    categories: ['🚍', '👨‍👩‍👦', '🏊', '🚍'],
+    categories: ['🥾', '👨‍👩‍👦', '🏊', '🚍'],
     duration: "1-3 hours",
     description: "Green Lake is a popular park located in the heart of Seattle. The park is a nice place to walk, picnic, and swim. It is also home to a variety of wildlife, including ducks, geese, and turtles."
   },
@@ -63,7 +63,7 @@ const activities = [
   },
   {
     title: "Washington Park Arboretum",
-    categories: ['🌲', '🚍'],
+    categories: ['🌲', '🥾', '🚍'],
     duration: "1-3 hours",
     description: "The Washington Park Arboretum is a 230-acre park located on the shores of Lake Washington. Great place to go for a walk, run, or bike ride."
   },
@@ -159,7 +159,7 @@ const activities = [
   },
   {
     title: "Juneau, Alaska",
-    categories: ['🌲', '✈️', '🦅', '❄️'],
+    categories: ['🌲', '🥾', '✈️', '🦅', '❄️'],
     duration: "2-4 days",
     description: "Alaska's capital city is a short 2-hour flight from Seattle. Juneau is home to the Mendenhall Glacier. Whale watching, brown bear viewing, hiking, and helicopter tours are all popular here."
   }
