--- a/src/layouts/MDLayout.astro
+++ b/src/layouts/MDLayout.astro
@@ -2,7 +2,7 @@
 import { SITE } from "@config";
 import Breadcrumbs from "@components/Breadcrumbs.astro";
 import Header from "@components/Header.astro";
-import Layout from "./Layout.astro";
+import Layout from "@layouts/Layout.astro";
 
 export interface Props {
   frontmatter: {
